--- a/ingress-nginx/project.yaml
+++ b/ingress-nginx/project.yaml
@@ -23,6 +23,16 @@ spec:
             enabled: true
             serviceMonitor:
               enabled: true
+        
+        # Tambah Dashboard otomatis
+        dashboards:
+          enabled: true
+          default:
+            ingress-nginx:
+              gnetId: 9614
+              revision: 1
+              datasource: Prometheus
+              
   destination:
     server: https://kubernetes.default.svc
     namespace: ingress-nginx
