--- a/monitoring/prometheus-stack-app.yaml
+++ b/monitoring/prometheus-stack-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
     chart: kube-prometheus-stack
-    targetRevision: 58.5.0  # stabil per Maret 2025
+    targetRevision: 58.5.0
     helm:
       values: |
         grafana:
@@ -16,7 +16,14 @@ spec:
           service:
             type: ClusterIP
           ingress:
-            enabled: false   # ❌ disable ingress (karena mau pakai port-forward)
+            enabled: false
+          dashboards:
+            default:
+              ingress-nginx:
+                gnetId: 9614
+                revision: 1
+                datasource: Prometheus
+
         prometheus:
           prometheusSpec:
             serviceMonitorSelectorNilUsesHelmValues: false
