--- a/monitoring/prometheus-stack-app.yaml
+++ b/monitoring/prometheus-stack-app.yaml
@@ -23,7 +23,22 @@ spec:
                 gnetId: 9614
                 revision: 1
                 datasource: Prometheus
-
+              kubernetes-cluster:
+                gnetId: 315
+                revision: 2
+                datasource: Prometheus
+              node-exporter:
+                gnetId: 1860
+                revision: 27
+                datasource: Prometheus
+              kubernetes-all-in-one:
+                gnetId: 6417
+                revision: 1
+                datasource: Prometheus
+              kubernetes-pods-detailed:
+                gnetId: 12802
+                revision: 1
+                datasource: Prometheus
         prometheus:
           prometheusSpec:
             serviceMonitorSelectorNilUsesHelmValues: false
