--- a/monitoring/prometheus-stack-app.yaml
+++ b/monitoring/prometheus-stack-app.yaml
@@ -40,6 +40,7 @@ spec:
                 revision: 1
                 datasource: Prometheus
         prometheus:
+          enabled: true
           prometheusSpec:
             serviceMonitorSelectorNilUsesHelmValues: false
   destination:
