--- a/monitoring/prometheus-stack-app.yaml
+++ b/monitoring/prometheus-stack-app.yaml
@@ -11,7 +11,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   sources:
-    - repoURL: https://github.com/<git-username>/<git-repo>.git
+    - repoURL: https://github.com/naufaalrmdhn/argocd-test.git
       targetRevision: HEAD
     - repoURL: https://prometheus-community.github.io/helm-charts/
       chart: prometheus
