--- a/monitoring/grafana.yaml
+++ b/monitoring/grafana.yaml
@@ -11,8 +11,9 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   sources:
-  - repoURL:  https://github.com/naufaalrmdhn/argocd-test.git
+  - repoURL:  https://github.com/naufaalrmdhn/argocd-test/monitoring.git
     targetRevision: HEAD
+    ref: <customizable reference>
   - repoURL: https://grafana.github.io/helm-charts
     chart: grafana
     targetRevision: 6.52.2
